# naive-strategy

./: Cargo.toml  Dockerfile  deployment.yml
.github/workflows/: ci.yml
src/: main.rs
